--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "express": "~4.16.3",
     "querystring": "~0.2.0",
     "scrollmonitor": "~1.2.0",
-    "vue": "~2.1.0",
-    "vue-resource": "~1.0.3"
+    "vue": "^2.1.10",
+    "vue-resource": "^1.5.1"
   },
   "devDependencies": {
     "nodemon": "~1.11.0",
